# Geometric_Data_Processing

./: .gitignore  collate.py  pyproject.toml  run.py  setup_blender.py  setup_deps.py  test.py  tmp.py  util.py
assignment1/: README.md  __init__.py  blender_manifest.toml
assignment1/boundaries/: boundary_loops.py  test_boundaries.py  ui.py
assignment1/components/: connected_components.py  test_components.py  ui.py
assignment1/genus/: genus.py  test_genus.py  ui.py
assignment1/registration/: iterative_closest_point.py  test_registration.py  ui.py
assignment1/volume/: test_volume.py  ui.py  volume.py
data/: README.md  meshes.py  primitives.py
doc/: README.md  report.md
